Ditt konto sida tillagd

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -11,6 +11,7 @@ html lang="en"
   nav
     a href="/" Start
     a href="/notes" Dina anteckningar
+    a href="/account" Ditt konto
 
   main
     ==yield
